syntax = "proto3";

package bacotell;

option go_package = "github.com/EliasStar/BacoTell/internal/proto/bacotellpb";

service Plugin {
    rpc Id(PluginIdRequest) returns (PluginIdResponse);
	rpc ApplicationCommands(PluginApplicationCommandsRequest) returns (PluginApplicationCommandsResponse);
	rpc MessageComponents(PluginMessageComponentsRequest) returns (PluginMessageComponentsResponse);
    rpc Modals(PluginModalsRequest) returns (PluginModalsResponse);
}

message PluginIdRequest {}

message PluginIdResponse {
    string id = 1;
}

message PluginApplicationCommandsRequest {}

message PluginApplicationCommandsResponse {
    repeated uint32 command_ids = 1;
}

message PluginMessageComponentsRequest {}

message PluginMessageComponentsResponse {
    repeated uint32 component_ids = 1;
}

message PluginModalsRequest {}

message PluginModalsResponse {
    repeated uint32 modal_ids = 1;
}
